
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


typedef scalar_t__ ULONG ;
struct TYPE_2__ {char* ImageName; int Base; } ;
typedef int * PVOID ;
typedef scalar_t__* PULONG ;
typedef scalar_t__ PUCHAR ;
typedef TYPE_1__* PSYSTEM_MODULE_INFORMATION ;
typedef int * PCHAR ;


 int ErrorQuit (char*) ;
 int SystemModuleInformation ;
 scalar_t__ ZwQuerySystemInformation (int ,int *,scalar_t__,scalar_t__*) ;
 int free (int *) ;
 int * malloc (scalar_t__) ;
 int printf (char*,char*) ;
 int strcpy (char*,char*) ;
 int * strstr (char*,char*) ;

ULONG GetKernelBase(char *KernelName)
{
        ULONG i, Byte, ModuleCount, KernelBase;
        PVOID pBuffer;
        PSYSTEM_MODULE_INFORMATION pSystemModuleInformation;
        PCHAR pName;

        ZwQuerySystemInformation(SystemModuleInformation, (PVOID)&Byte, 0, &Byte);

        if((pBuffer = malloc(Byte)) == ((void*)0))
                ErrorQuit("malloc failed.\n");

        if(ZwQuerySystemInformation(SystemModuleInformation, pBuffer, Byte, &Byte))
                ErrorQuit("ZwQuerySystemInformation failed\n");

        ModuleCount = *(PULONG)pBuffer;
        pSystemModuleInformation = (PSYSTEM_MODULE_INFORMATION)((PUCHAR)pBuffer + sizeof(ULONG));
        for(i = 0; i < ModuleCount; i++)
        {
                if((pName = strstr(pSystemModuleInformation->ImageName, "ntoskrnl.exe")) != ((void*)0))
                {
                        KernelBase = (ULONG)pSystemModuleInformation->Base;
                        printf("Kernel is %s\n", pSystemModuleInformation->ImageName);
                        free(pBuffer);
                        strcpy(KernelName, "ntoskrnl.exe");

                        return KernelBase;
                }

                if((pName = strstr(pSystemModuleInformation->ImageName, "ntkrnlpa.exe")) != ((void*)0))
                {
                        KernelBase = (ULONG)pSystemModuleInformation->Base;
                        printf("Kernel is %s\n", pSystemModuleInformation->ImageName);
                        free(pBuffer);
                        strcpy(KernelName, "ntkrnlpa.exe");

                        return KernelBase;
                }

                pSystemModuleInformation++;
        }

        free(pBuffer);
        return 0;
}
